[api,shenker/cloning] Benchling sync now only updates DNASequences if hashes don't match. Oligos are always updated. This was not rigorously tested but seems to work.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210214 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210214 3G.ipynb
@@ -136,6 +136,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import hashlib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hashlib.sha256(\"HHH\".encode()).hexdigest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hashlib.sha256().update"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "z = reg.sync_benchling(overwrite=True, return_data=True)"
    ]
   },
@@ -145,7 +172,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z"
+    "d = bench_session.DNASequence.find_by_name(\"pLIB1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bench_session.DNASequence.ARCHIVE_REASONS.DEFAULT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.archive?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z[1][(\"pLIB_plasmids\", \"pLIB1\")].dump()"
    ]
   },
   {
@@ -155,6 +209,24 @@
    "outputs": [],
    "source": [
     "reg.get(\"pLIB1\")[\"_seq\"][:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = reg.get(\"J23101\")[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash(x)"
    ]
   },
   {
