[shenker/snakenbake] As used on 210226 to make a basilisk wafer.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -249,17 +249,19 @@
     "chips = [s.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
     "grid_metadata = {}\n",
+    "draw_grid = True\n",
     "for chip_name, chip in zip(chip_names, chips):\n",
     "    chip_grid_metadata = fov.get_grid_metadata(fov_dims, metadata[chip_name])\n",
     "    grid_metadata[chip_name] = chip_grid_metadata\n",
-    "    fov.draw_grid_overlay(\n",
-    "        chip,\n",
-    "        metadata[chip_name],\n",
-    "        fov_dims,\n",
-    "        chip_grid_metadata,\n",
-    "        center_margins=True,\n",
-    "        rotate=True,\n",
-    "    )\n",
+    "    if draw_grid:\n",
+    "        fov.draw_grid_overlay(\n",
+    "            chip,\n",
+    "            metadata[chip_name],\n",
+    "            fov_dims,\n",
+    "            chip_grid_metadata,\n",
+    "            center_margins=True,\n",
+    "            rotate=True,\n",
+    "        )\n",
     "grid_df = pd.concat(\n",
     "    {\n",
     "        k: pd.DataFrame(v.values()).set_index(\"fov_name\")\n",
@@ -271,7 +273,7 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 210108\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 210226\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
@@ -279,7 +281,7 @@
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     "    alignment_mark_position=40e3,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/210108basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/210226basilisk.gds\")"
    ]
   },
   {
