[shenker/microscope_design] Checkpoint from August 2020.

--- a/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/microscope_design/Prisms.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "deltaT_target = np.deg2rad(10)\n",
+    "deltaT_target = np.deg2rad(4)\n",
     "w = np.linspace(0.4, 0.7, 20)\n",
     "rows = []\n",
     "for glass_name, glass in catalog.items():\n",
@@ -110,15 +110,6 @@
     "    except:\n",
     "        continue\n",
     "    rows.append((*glass_name, *row))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows[2]"
    ]
   },
   {
@@ -144,7 +135,7 @@
     "        \"SSR\",\n",
     "    ),\n",
     ")\n",
-    "for col in [\"beta\", \"gamma\", \"alpha\", \"deltaC\", \"deltaM\", \"delta1\"]:\n",
+    "for col in [\"beta\", \"gamma\", \"alpha\", \"deltaC\", \"deltaT\", \"deltaM\", \"delta1\"]:\n",
     "    singlet_df.loc[:, col] *= 180 / np.pi"
    ]
   },
@@ -192,7 +183,7 @@
     "]\n",
     "\n",
     "glasses_long = [[gg for gg in catalog.keys() if gg[1] == g][0] for g in glasses]\n",
-    "glasses_long = [g for g in catalog.keys() if \"SCHOTT\" in g[0]][::5]"
+    "glasses_long = [g for g in catalog.keys() if \"SCHOTT\" in g[0]]  # [::10]"
    ]
   },
   {
@@ -202,10 +193,10 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "deltaT_target = np.deg2rad(25)\n",
+    "deltaT_target = np.deg2rad(6)\n",
     "system = \"doublet\"\n",
-    "system = \"double-amici\"\n",
-    "merit = \"dev_linearityK\"\n",
+    "# system = \"double-amici\"\n",
+    "merit = \"dev_linearity_thickness\"  # \"dev_linearityK\"\n",
     "w = np.linspace(0.4, 0.7, 20)\n",
     "rows = []\n",
     "for glass_name1 in tqdm(glasses_long):\n",
@@ -301,13 +292,122 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "glasses = [\n",
+    "    \"CAF2\",\n",
+    "    \"LASF40\",\n",
+    "    \"SF67\",\n",
+    "    \"LASF31A\",\n",
+    "    \"PK52A\",\n",
+    "    \"FK51A\",\n",
+    "    \"BAF4\",\n",
+    "    \"LAF34\",\n",
+    "    \"LASF44\",\n",
+    "    \"SF8\",\n",
+    "    \"PK51\",\n",
+    "]\n",
+    "\n",
+    "# glasses_long = [[gg for gg in catalog.keys() if g in gg[1]][0] for g in glasses]\n",
+    "glasses_long = [g for g in catalog.keys() if \"SCHOTT\" in g[0]][::5]"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Janssen quintuplet"
+    "glasses_long"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "deltaT_target = np.deg2rad(20)\n",
+    "system = \"triplet\"\n",
+    "system = \"janssen\"\n",
+    "merit = \"dev_linearityK\"\n",
+    "w = np.linspace(0.4, 0.7, 20)\n",
+    "rows = []\n",
+    "for glass_name1 in tqdm(glasses_long):\n",
+    "    try:\n",
+    "        n1_func = opticalmaterials.get_n(catalog[glass_name1])\n",
+    "        n1 = n1_func(w)\n",
+    "    except:\n",
+    "        continue\n",
+    "    for glass_name2 in tqdm(glasses_long, leave=False):\n",
+    "        n2_func = opticalmaterials.get_n(catalog[glass_name2])\n",
+    "        n2 = n2_func(w)\n",
+    "        for glass_name3 in glasses_long:\n",
+    "            n3_func = opticalmaterials.get_n(catalog[glass_name3])\n",
+    "            n3 = n3_func(w)\n",
+    "            # row = prisms.optimize_doublet(w, n1, n2, deltaT_target, n3=n3, merit=merit, system=system)\n",
+    "            try:\n",
+    "                row = prisms.optimize_doublet(\n",
+    "                    w, n1, n2, deltaT_target, n3=n3, merit=merit, system=system\n",
+    "                )\n",
+    "            except:\n",
+    "                continue\n",
+    "            rows.append((*glass_name1, *glass_name2, *glass_name3, *row))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triplet_df = pd.DataFrame.from_records(\n",
+    "    rows,\n",
+    "    columns=(\n",
+    "        \"glass1_1\",\n",
+    "        \"glass1_2\",\n",
+    "        \"glass2_1\",\n",
+    "        \"glass2_2\",\n",
+    "        \"glass3_1\",\n",
+    "        \"glass3_2\",\n",
+    "        \"alpha1\",\n",
+    "        \"alpha2\",\n",
+    "        \"deltaC\",\n",
+    "        \"deltaT\",\n",
+    "        \"NL\",\n",
+    "        \"SSR\",\n",
+    "        \"deltaM\",\n",
+    "        \"K\",\n",
+    "        \"delta1\",\n",
+    "        \"delta2\",\n",
+    "        \"nonlin\",\n",
+    "        \"chromat\",\n",
+    "    ),\n",
+    ")\n",
+    "for col in [\"alpha1\", \"alpha2\", \"deltaC\", \"deltaT\", \"deltaM\", \"delta1\", \"delta2\"]:\n",
+    "    triplet_df.loc[:, col] *= 180 / np.pi\n",
+    "\n",
+    "triplet_df[\"SSR_abs\"] = np.abs(triplet_df[\"SSR\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triplet_df.sort_values(\"SSR_abs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triplet_df.sort_values(\"SSR_abs\").iloc[:2000][[\"deltaT\", \"SSR\", \"K\"]].hvplot.scatter(\n",
+    "    \"deltaT\", \"SSR\", color=\"K\"\n",
+    ")"
    ]
   },
   {
