[api,shenker/cloning] Forgot to commit the seqrecord_to_benchling with add_hash kwarg.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/210215 NAO strains import.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210215 NAO strains import.ipynb
@@ -109,9 +109,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lib_parts = reg.get_df_by_id(reg.registry[(\"LIB\", \"parts\")])\n",
-    "# plib_plasmids = reg.get_df_by_id(reg.registry[(\"pLIB\",\"plasmids\")])\n",
-    "lib_strains = reg.get_df_by_id(reg.registry[(\"LIB\", \"strains\")])"
+    "lib_parts = reg.get_df((\"LIB\", \"parts\"))\n",
+    "# plib_plasmids = reg.get_df((\"pLIB\",\"plasmids\"))\n",
+    "lib_strains = reg.get_df((\"LIB\", \"strains\"))"
    ]
   },
   {
