--- a/paulssonlab/src/paulssonlab/shenker/cloning/210222 3G.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/210222 3G.ipynb
@@ -100,142 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# reg.duplicate_collection(\"LIB\", \"TESTA\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "benchlingapi.models.Oligo.update"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "benchlingapi.models.DNASequence.__bases__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "benchlingapi.models.Oligo.__bases__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import hashlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hashlib.sha256(\"HHH\".encode()).hexdigest()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hashlib.sha256().update"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "z = reg.sync_benchling(overwrite=True, return_data=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d = bench_session.DNASequence.find_by_name(\"pLIB1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bench_session.DNASequence.ARCHIVE_REASONS.DEFAULT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.archive?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z[1][(\"pLIB_plasmids\", \"pLIB1\")].dump()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.get(\"pLIB1\")[\"_seq\"][:100]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = reg.get(\"J23101\")[\"_seq\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hash(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg.get(\"J23101\")"
    ]
   },
   {
@@ -526,58 +391,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part expressions test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tatsu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# digest\n",
-    "# PCR\n",
-    "# annealed oligos\n",
-    "# dsDNA oligo\n",
-    "# construct part seq from spreadsheet if no implementation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "command = \"pLIB225/BsaI,oLIT0.9=oLIT0.10/BsaI\"\n",
-    "command = \"oLIT9=oLIT10/BsaI\"\n",
-    "###\n",
-    "command = \"oLIT0.9=oLIT0.10\"\n",
-    "command = \"oLIT0.9=oLIT0.10/BsaI\"\n",
-    "command = \"pLIB225<oLIB1,oLIB2>/BsaI\"\n",
-    "# command = \"oLIT1=oLIT2<oLIB1,oLIB2>/BsaI\"\n",
-    "# command = \"oLIT1=oLIT2<oLIB1,oLIB2>\"\n",
-    "# command = \"pLIB225/BsaI\"\n",
-    "###\n",
-    "# command = \"oLIT0.9=oLIT0.10,oLIT0.9=oLIT0.10\"\n",
-    "# command = \"oLIT0.9=oLIT0.10/BsaI,oLIT0.9=oLIT0.10/BsaI\"\n",
-    "command = \"oLIT1=oLIT2<oLIB1,oLIB2>/BsaI,oLIT1=oLIT2<oLIB1,oLIB2>/BsaI\"\n",
-    "ast = parser.parse(command)\n",
-    "ast"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Command parsing"
    ]
   },
@@ -645,89 +458,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.get(\"pLIB252\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def command(expr, execution_context):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def goldengate(*args):\n",
-    "    return \"gg\", args\n",
-    "\n",
-    "\n",
-    "def threeg(*args):\n",
-    "    return \"3g\", args\n",
-    "\n",
-    "\n",
-    "def pcr(*args):\n",
-    "    return \"pcr\", args\n",
-    "\n",
-    "\n",
-    "commands = {\"GG\": goldengate, \"3G\": threeg, \"PCR\": pcr}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reference_parser = tatsu.compile(grammar_preamble + reference_grammar)\n",
-    "\n",
-    "\n",
-    "class CloningCommandSemantics(object):\n",
-    "    def __init__(self, commands):\n",
-    "        self.commands = commands\n",
-    "\n",
-    "    def command(self, ast):\n",
-    "        if ast.command_name not in self.commands:\n",
-    "            raise tatsu.semantics.SemanticError(\n",
-    "                \"command must be one of: {}\".format(\n",
-    "                    \", \".join([f\"@{k}\" for k in commands.keys()])\n",
-    "                )\n",
-    "            )\n",
-    "        command = self.commands[ast.command_name]\n",
-    "        return command(ast.arguments)\n",
-    "\n",
-    "    def int_(self, ast):\n",
-    "        return int(s)\n",
-    "\n",
-    "    def float_(self, ast):\n",
-    "        return float(s)\n",
-    "\n",
-    "    def name(self, ast):\n",
-    "        return ast.name\n",
-    "\n",
-    "    def assembly(self, ast):\n",
-    "        return ast.assembly\n",
-    "\n",
-    "\n",
-    "# parser.parse(command, semantics=CloningCommandSemantics())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# GG\n",
-    "command = \"@GG(J23101, BCD11, mVenus, L3S3P11, p121/BsaI)\"\n",
+    "# command = \"@GG(J23101, BCD11, mVenus, L3S3P11, p121/BsaI)\"\n",
     "# 3G\n",
-    "# command = \"@3G(@GG(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5), @GG(UNS5, J23150, CFP, BCD16, L3S2P55, UNS10), JUMP_p15a_UNS1_UNS10)\""
+    "# command = \"@3G(@GG(UNS1, J23101, BCD11, mVenus, L3S3P11, UNS5), @GG(UNS5, J23150, CFP, BCD16, L3S2P55, UNS10), JUMP_p15a_UNS1_UNS10)\"\n",
+    "# command = \"\"\"@Gib(@GG:tLT(UNS1_A, pTac, B0032m_BC, sigW, L3S1P13, UNS3_E),\n",
+    "#                   @GG:tLT(UNS3_A, J23107_AB, B0034m_BC, mScarlet-I, L3S3P11, UNS4_E),\n",
+    "#                   @GG:tLT(UNS4_A, PsigW, B0032m_BC, sfGFP, L3S2P55, UNS5_E),\n",
+    "#                   @GG:tLT(UNS5_A, pTet_AB, B0034m_BC, rsiW, L3S2P11, UNS6_E),\n",
+    "#                   @GG:tLT(UNS6_A, PsigW, BCD16, sigW, L3S2P21, UNS10_E))\"\"\"\n",
+    "# TODO: pLIB213-pLIB218 maps\n",
+    "# TODO: BACKBONE!!!\n",
+    "# command = \"\"\"@Gib(@GG:tLT3(UNS1_A, pTac, B0032m_BC, sfCFP, L3S1P13, UNS3_E),\n",
+    "#                   @GG:tLT(UNS3_A, J23107_AB, B0034m_BC, mScarlet-I, L3S3P11, UNS4_E))\"\"\"\n",
+    "# command = \"@GG:tLT(UNS1_A, pTac, B0032m_BC, sfCFP, L3S1P13, UNS3_E)\"\n",
+    "command = \"\"\"@Gib(@GG:tLT(UNS1_A, pTac, B0032m_BC, sfCFP, L3S1P13, UNS3_E),\n",
+    "                  @GG:tLT(UNS3_A, J23107_AB, B0034m_BC, mScarlet-I, L3S3P11, UNS4_E),\n",
+    "                  @GG:tLT(UNS4_A, pTac, B0032m_BC, sfGFP, L3S2P55, UNS5_E),\n",
+    "                  @GG:tLT(UNS5_A, pTet_AB, B0034m_BC, sfCFP, L3S2P11, UNS6_E),\n",
+    "                  @GG:tLT(UNS6_A, pTac, BCD16, sfCFP, L3S2P21, UNS10_E))\"\"\""
    ]
   },
   {
@@ -736,8 +485,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser.parse(command, semantics=CloningCommandSemantics(commands))"
+    "commands.command_parser.parse(command)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: better error message if next id fails\n",
+    "# ignore columns with formulae when _get_next_empty_row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.parse_id(\" tLIB  \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow._get_next_empty_row(reg.get_sheet((\"tLT\", \"tus\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workflow.get_next_collection_id(reg.get_sheet((\"tLT\", \"tus\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_command(cmd, registry, context=None):\n",
+    "    ctx = CommandContext(registry, context)\n",
+    "    return commands.command_parser.parse(cmd, semantics=CommandSemantics(cmds, ctx))\n",
+    "\n",
+    "\n",
+    "res = eval_command(command, reg, context=\"pLIB\")\n",
+    "print(dissoc(res, \"_command\"))\n",
+    "print(res[\"_command\"])\n",
+    "unparse_command(res[\"_command\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
