[shenker/snakenbake] Fixed Heidelberg MLA150 hang (brought write time down from 30min to 5min) by not using two cell references of the same chip cell and instead making every cell name unique (using a uuid). This bug affects the MLA150 and also causes a crash/memory leak in klayout when trying to select one of the affected cells. Both these bugs are fixed.

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/Single-input Basilisk.ipynb
@@ -260,7 +260,7 @@
     "            fov_dims,\n",
     "            chip_grid_metadata,\n",
     "            center_margins=True,\n",
-    "            rotate=True,\n",
+    "            rotate=False,\n",
     "        )\n",
     "grid_df = pd.concat(\n",
     "    {\n",
@@ -273,7 +273,7 @@
     "wafer_manifest = \"\\n\".join([f\"{idx+1}) \" + name for idx, name in enumerate(chip_names)])\n",
     "main_cell = s.wafer(\n",
     "    chips,\n",
-    "    text_right=\"Basilisk\\n JQS/DE/YG 210226\",\n",
+    "    text_right=\"Basilisk\\n JQS/DE/YG 210304\",\n",
     "    text_left=wafer_manifest,\n",
     "    text=True,\n",
     "    mask=False,\n",
@@ -281,7 +281,7 @@
     "    diameter=(4 * u.inch).to(u.um).magnitude,\n",
     "    alignment_mark_position=40e3,\n",
     ")\n",
-    "s.write_gds(main_cell, \"designs/210226basilisk.gds\")"
+    "s.write_gds(main_cell, \"designs/210304basilisk.gds\")"
    ]
   },
   {
@@ -381,6 +381,156 @@
     "        length_unit=u.um,\n",
     "    )\n",
     ").to(u.bar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# FOV calculation redux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "md = metadata[\"Basilisk S1 LS5 FC90 L35 W1.4 TS5.1 TG30\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = fov.get_fov_coverage(fov_dims[\"bsi 40x\"], **md, skip_first=False)\n",
+    "b = fov.get_fov_coverage(fov_dims[\"bsi 40x\"], **md, skip_first=True)\n",
+    "(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fovh = fov_dims[\"bsi 40x\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in md.items():\n",
+    "    locals()[k] = v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "delta_y1 = trench_gap + trench_length\n",
+    "delta_y2 = feeding_channel_width + trench_length\n",
+    "delta_y = delta_y1 + delta_y2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(delta_y1, delta_y2, delta_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.array((delta_y1, delta_y2, delta_y)) * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "divmod(fovh - trench_length, delta_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unit_cell = trench_gap / 2 + trench_length + feeding_channel_width / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unit_cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_unit_cells, remainder = divmod(fovh, unit_cell)\n",
+    "(num_unit_cells, remainder, num_unit_cells * unit_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "partial_delta_y1 = trench_length + trench_gap / 2\n",
+    "partial_delta_y2 = trench_length + feeding_channel_width / 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(partial_delta_y1, partial_delta_y2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if num_unit_cells % 2 == 0:\n",
+    "    print(divmod(remainder, partial_delta_y1), divmod(remainder, partial_delta_y2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(divmod(remainder, partial_delta_y1), divmod(remainder, partial_delta_y2))"
    ]
   },
   {
